# ragnar

./: .env.example  .gitignore  README.fr.md  README.md  chunking.py  ingest_utilitr.py  mkdocs.yml  pyproject.toml  requirements.txt  util.py
.github/workflows/: docs.yml
docs/: getting-started.fr.md  getting-started.md  index.fr.md  index.md
docs/reference/: cli.md  python.md
ragnar/: chunking.py  ingest_utilitr.py  retrieval.py
ragnar/cli/: config.py  ingest.py
ragnar/embeddings/: remote.py
ragnar/old/: rag.py
ragnar/sources/: loader.py  markdown_source.py  registry.py  utilitr.py
ragnar/sources/models/: base.py  markdown_repo.py
ragnar/templates/: sources.example.yaml  utilitr.example.yaml
ragnar/tests/: test_cli_ingest_parse.py  test_markdown_repo_source.py  test_registry.py  test_sources_loader.py
ragnar/vectorstores/: qdrant_store.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/fr/: index.html
site/fr/getting-started/: index.html
site/fr/reference/cli/: index.html
site/fr/reference/python/: index.html
site/getting-started/: index.html
site/reference/cli/: index.html
site/reference/python/: index.html
site/search/: search_index.json
sources/: utilitr.py
vectorstores/: qdrant_store.py
