[project]
name = "ragnar"
version = "0.1.2"
requires-python = ">=3.10"
description = "RAG utilities and app backend for CanaR (Insee)"
readme = "README.md"

dependencies = [
  "qdrant-client>=1.9.0",
  "markdown-it-py>=3.0.0",
  "PyYAML>=6.0.1",
  "numpy>=1.26.0",
  "requests>=2.31.0",
  "tiktoken>=0.7.0",
  "python-dotenv>=1.0",
  "tqdm>=4.66",
  "pydantic>=2.6,<3.0",
]

[project.scripts]
ragnar-ingest = "ragnar.cli.ingest:main"
ragnar-config = "ragnar.cli.config:main"

[project.optional-dependencies]
# Use these in CI or locally as needed:
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "responses>=0.25",
]
lint = [
  "ruff>=0.5",
  "black>=24.0",
  "mypy>=1.10",
  "types-requests>=2.31",
]
docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "mkdocs-static-i18n>=1.2",
  "mkdocs-literate-nav>=0.6",
  "mkdocs-gen-files>=0.5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ragnar*"]

[tool.setuptools.package-data]
ragnar = ["templates/*.yaml"]